--- a/resources/lang/br.json
+++ b/resources/lang/br.json
@@ -4,7 +4,7 @@
     "Status": "Status",
     "Repair": "Reparar",
     "Sell": "Vender",
-    "Claim": "Reivindicar",
+    "Claim": "Coletar",
     "House Vault": "Rendimento",
     "Daily Claim": "Rendimento Diário",
     "Last Claim": "Último Rendimento",
@@ -24,5 +24,19 @@
     "Click on the button below to purchase a new home.": "Clique no botão abaixo para adquirir uma nova casa.",
     "High": "Alta",
     "Medium": "Média",
-    "Low": "Baixa"
+    "Low": "Baixa",
+    "Back": "Voltar",
+    "Back to Home": "Ir para o Início",
+    "Whoops! Page not found": "Página não encontrada",
+    "It's looking like you may have taken a wrong turn.": "Parece que você pegou o caminho errado.",
+    "Don't worry... it happens to the best of us.": "Não se preocupe... isso acontece com qualquer um de nós.",
+    "You might want to check your internet connection.": "Você pode querer verificar sua conexão com a Internet.",
+    "Here's a little tip that might help you get back on track.": "Aqui está uma pequena dica que pode ajudar você a voltar ao caminho.",
+    "We are currently performing maintenance": "No momento, estamos realizando uma manutenção",
+    "We're making the system more awesome. We'll be back shortly.": "Estamos tornando o sistema mais incrível. Voltaremos em breve.",
+    "Why is the Site Down?": "Por que o site está fora do ar?",
+    "What is the Downtime?": "Qual é o tempo de inatividade?",
+    "Do you need Support?": "Você precisa de suporte?",
+    "Statistics": "Estatísticas",
+    "Welcome to": "Bem vindo ao"
 }
