--- a/resources/lang/br.json
+++ b/resources/lang/br.json
@@ -38,5 +38,7 @@
     "What is the Downtime?": "Qual é o tempo de inatividade?",
     "Do you need Support?": "Você precisa de suporte?",
     "Statistics": "Estatísticas",
-    "Welcome to": "Bem vindo ao"
+    "Welcome to": "Bem vindo ao",
+    "Looks like you don't have any houses yet.": "Parece que você ainda não possui nenhuma casa.",
+    "But don't worry, you can purchase one at any time by clicking the \"New Mint\" button!" : "Mas não se preocupe, você pode adquirir uma a qualquer momento clicando no botão \"Criar Nova Casa\"!"
 }
