remainClaim e removido duplo parse

--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -5,6 +5,8 @@
     "Repair": "Reparar",
     "Sell": "Vender",
     "Claim": "Coletar",
+    "Cost": "Custo",
+    "Available": "Disponível",
     "House Vault": "Rendimento",
     "Daily Claim": "Rendimento Diário",
     "Last Claim": "Último Rendimento",
