--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -3,7 +3,7 @@
     "Coins": "Moedas",
     "Status": "Status",
     "Repair": "Reparar",
-    "Upgrade": "Melhorar",
+    "Upgrade": "Upgrade",
     "Mint": "Criar",
     "Sell": "Vender",
     "Claim": "Coletar",
@@ -14,6 +14,7 @@
     "Last Claim": "Último Rendimento",
     "Total Claim": "Total de Rendimento",
     "Total Houses": "Total de Casas",
+    "Max Daily Claim": "Máximo de Rendimento Diário",
     "Total Citizens": "Total de Cidadãos",
     "Connect with MetaMask": "Conectar com MetaMask",
     "My Houses": "Minhas Casas",
