atualizações de idiomas e inserção de ordenação das buildings

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,28 +1,86 @@
 {
     "New": "Nuevo",
+    "Error": "Error",
+    "Success": "Éxito", 
     "Coins": "Monedas",
     "Status": "Estado",
     "Repair": "Reparar",
+    "Upgrade": "Mejorar",
+    "Mint": "Crear",
     "Sell": "Vender",
-    "Claim": "Reclamar",
-    "House Vault": "Rendimiento",
-    "Daily Claim": "Reclamo Diario",
-    "Last Claim": "Último Reclamo",
-    "Total Claim": "Reclamación Total",
-    "Total Houses": "Total Casas",
+    "Claim": "Recoger",
+    "Cost": "Costo",
+    "Available": "Disponible",
+    "Sort By": "Ordenar por",
+    "Claim Progress": "Progreso de reclamación",
+    "Name": "Nombre",
+    "Level": "Nivel",
+    "Rarity": "Raridad",
+    "House Vault": "Casa de seguros",
+    "Daily Claim": "Reclamación diaria",
+    "Last Claim": "Última reclamación",
+    "Total Claim": "Reclamación total",
+    "Total Houses": "Casas totales",
+    "Max Daily Claim": "Máxima reclamación diaria",
     "Total Citizens": "Ciudadanos totales",
-    "Connect with MetaMask": "Conéctese con MetaMask",
-    "My Houses": "Mis Casas",
+    "Connect with MetaMask": "Conectar con MetaMask",
+    "My Houses": "Mis casas",
     "Inventory": "Inventario",
-    "Daily Quests": "Misiones Diarias",
+    "Daily Quests": "Misiones diarias",
     "Marketplace": "Mercado",
     "Exchange": "Intercambio",
     "All rights reserved": "Todos los derechos reservados",
-    "Mint House": "Crear Casa",
-    "New Mint": "Crear Casa Nueva",
+    "Mint House": "Crear casa",
+    "New Mint": "Nueva creación",
     "Production": "Producción",
-    "Click on the button below to purchase a new home.": "Haga clic en el botón de abajo para comprar una casa nueva.",
-    "High": "Alta",
+    "Click on the button below to purchase a new home.": "Haga clic en el botón de abajo para comprar una nueva casa.",
+    "High": "Alto",
     "Medium": "Medio",
-    "Low": "Baja"
+    "Low": "Bajo",
+    "Back": "Atrás",
+    "Back to Home": "Volver a casa", 
+    "Whoops! Page not found": "¡Vaya! Página no encontrada", 
+    "It's looking like you may have taken a wrong turn.":   "Parece que puede haber tomado una sospecha equivocada.", 
+    "Don't worry... it happens to the best of us.": "No se preocupe... eso sucede a nuestra mejor.", 
+    "You might want to check your internet connection.": "Quizás desee comprobar su conexión a internet.", 
+    "Here's a little tip that might help you get back on track.": "Aquí hay una pequeña sugerencia que puede ayudarle a volver a la pista.", 
+    "We are currently performing maintenance": "Estamos realizando mantenimiento", 
+    "We're making the system more awesome. We'll be back shortly.": "Estamos haciendo el sistema más increíble. Regresaremos pronto.", 
+    "Why is the Site Down?": "¿Por qué está el sitio web caído?", 
+    "What is the Downtime?": "¿Qué es el tiempo de caída?", 
+    "Do you need Support?": "¿Necesita soporte?", 
+    "Statistics": "Estadísticas", 
+    "Welcome to": "Bienvenido a", 
+    "Looks like you don't have any houses yet.": "Parece que no tiene ninguna casa todavía.",
+    "But don't worry, you can purchase one at any time by clicking the \"New Mint\" button!": "Pero no se preocupe, puede comprar una en cualquier momento haciendo clic en el botón \"Nueva creación\"!", 
+    "Are you sure?": "¿Está seguro?",
+    "You are about to spend :currency coins to mint a new building!": "Está a punto de gastar :currency monedas para crear un nuevo edificio!", 
+    "You are about to spend :currency coins to :action this house!": "Está a punto de gastar :currency monedas para :action esta casa!", 
+    "Yes, :action it!": "Sí, :action!",
+    "Not enough currency!": "No hay suficiente moneda!", 
+    "You do not have enough currency to mint.": "No tiene suficiente moneda para crear.", 
+    "Minting failed!": "¡Creación fallida!", 
+    "Minting failed. Please try again later.": "¡Creación fallida. Por favor, inténtelo de nuevo más tarde.", 
+    "Missing required parameters.": "Parámetros requeridos perdidos.", 
+    "Building not found.": "Edificio no encontrado.", 
+    "Claim not available yet.": "Reclamación no disponible todavía.", 
+    "Claimed building successfully.": "Edificio reclamado con éxito.", 
+    "Failed to claim building.": "Error al recoger edificio.", 
+    "Not enough currency.": "No hay suficiente moneda.", 
+    "The building does not accommodate new citizens.": "El edificio no acomoda a nuevos ciudadanos.", 
+    "Upgraded building successfully.": "Edificio mejorado con éxito.", 
+    "Failed to upgrade building.": "Error al mejorar edificio.", 
+    "The building is not in need of repair.": "El edificio no necesita reparación.", 
+    "Repaired building successfully.": "Edificio reparado con éxito.", 
+    "Failed to repair building.": "Error al reparar edificio.", 
+    "Invalid data.": "Datos inválidos.", 
+    "Transaction already exists": "La transacción ya existe", 
+    "Invalid amount": "Cantidad inválida", 
+    "Transaction registered successfully!": "Transacción registrada con éxito!", 
+    "Something went wrong": "Algo salió mal", 
+    "Invalid credentials": "Credenciales inválidas", 
+    "Transaction not found": "Transacción no encontrada", 
+    "Cancel": "Cancelar", 
+    "Coming soon!": "¡Próximamente!", 
+    "This feature is not available yet": "Esta función no está disponible todavía"
 }
