--- a/resources/lang/pt.json
+++ b/resources/lang/pt.json
@@ -1,5 +1,7 @@
 {
     "New": "Novo",
+    "Error": "Erro",
+    "Success": "Sucesso",
     "Coins": "Moedas",
     "Status": "Status",
     "Repair": "Reparar",
@@ -9,6 +11,11 @@
     "Claim": "Coletar",
     "Cost": "Custo",
     "Available": "Disponível",
+    "Sort By": "Ordenar Por",
+    "Claim Progress": "Progresso da coleta",
+    "Name": "Nome",
+    "Level": "Nível",
+    "Rarity": "Raridade",
     "House Vault": "Rendimento",
     "Daily Claim": "Rendimento Diário",
     "Last Claim": "Último Rendimento",
@@ -49,5 +56,31 @@
     "Are you sure?" : "Você tem certeza?",
     "You are about to spend :currency coins to mint a new building!": "Você está prestes a gastar :currency moedas para criar uma nova casa!",
     "You are about to spend :currency coins to :action this house!": "Você está prestes a gastar :currency moedas para :action esta casa!",
-    "Yes, :action it!" : "Sim, :action!"
+    "Yes, :action it!" : "Sim, :action!",
+    "Not enough currency!": "Moedas insuficientes!",
+    "You do not have enough currency to mint.": "Você não tem moedas suficientes para criar.",
+    "Minting failed!": "Falha ao criar!",
+    "Minting failed. Please try again later.": "Falha ao criar. Por favor, tente novamente mais tarde.",
+    "Missing required parameters.": "Parâmetros obrigatórios ausentes.",
+    "Building not found.": "Edifício não encontrado.",
+    "Claim not available yet.": "Coleta indisponível ainda.",
+    "Claimed building successfully.": "Edifício coletado com sucesso.",
+    "Failed to claim building.": "Falha ao coletar edifício.",
+    "Not enough currency.": "Moedas insuficientes.",
+    "The building does not accommodate new citizens.": "O edifício não cabe novas cidades.",
+    "Upgraded building successfully.": "Edifício atualizado com sucesso.",
+    "Failed to upgrade building.": "Falha ao atualizar edifício.",
+    "The building is not in need of repair.": "O edifício não precisa de reparo.",
+    "Repaired building successfully.": "Edifício reparado com sucesso.",
+    "Failed to repair building.": "Falha ao reparar edifício.",
+    "Invalid data.": "Dados inválidos.",
+    "Transaction already exists": "Transação já existe",
+    "Invalid amount": "Valor inválido",
+    "Transaction registered successfully!": "Transação registrada com sucesso!",
+    "Something went wrong": "Algo deu errado",
+    "Invalid credentials": "Credenciais inválidas",
+    "Transaction not found": "Transação não encontrada",
+    "Cancel": "Cancelar",
+    "Coming soon!": "Em breve!",
+    "This feature is not available yet": "Esta funcionalidade não está disponível ainda"
 }
