--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,7 +1,7 @@
 {
     "New": "Nuevo",
     "Error": "Error",
-    "Success": "Éxito", 
+    "Success": "Éxito",
     "Coins": "Monedas",
     "Status": "Estado",
     "Repair": "Reparar",
@@ -38,49 +38,81 @@
     "Medium": "Medio",
     "Low": "Bajo",
     "Back": "Atrás",
-    "Back to Home": "Volver a casa", 
-    "Whoops! Page not found": "¡Vaya! Página no encontrada", 
-    "It's looking like you may have taken a wrong turn.":   "Parece que puede haber tomado una sospecha equivocada.", 
-    "Don't worry... it happens to the best of us.": "No se preocupe... eso sucede a nuestra mejor.", 
-    "You might want to check your internet connection.": "Quizás desee comprobar su conexión a internet.", 
-    "Here's a little tip that might help you get back on track.": "Aquí hay una pequeña sugerencia que puede ayudarle a volver a la pista.", 
-    "We are currently performing maintenance": "Estamos realizando mantenimiento", 
-    "We're making the system more awesome. We'll be back shortly.": "Estamos haciendo el sistema más increíble. Regresaremos pronto.", 
-    "Why is the Site Down?": "¿Por qué está el sitio web caído?", 
-    "What is the Downtime?": "¿Qué es el tiempo de caída?", 
-    "Do you need Support?": "¿Necesita soporte?", 
-    "Statistics": "Estadísticas", 
-    "Welcome to": "Bienvenido a", 
+    "Back to Home": "Volver a casa",
+    "Whoops! Page not found": "¡Vaya! Página no encontrada",
+    "It's looking like you may have taken a wrong turn.":   "Parece que puede haber tomado una sospecha equivocada.",
+    "Don't worry... it happens to the best of us.": "No se preocupe... eso sucede a nuestra mejor.",
+    "You might want to check your internet connection.": "Quizás desee comprobar su conexión a internet.",
+    "Here's a little tip that might help you get back on track.": "Aquí hay una pequeña sugerencia que puede ayudarle a volver a la pista.",
+    "We are currently performing maintenance": "Estamos realizando mantenimiento",
+    "We're making the system more awesome. We'll be back shortly.": "Estamos haciendo el sistema más increíble. Regresaremos pronto.",
+    "Why is the Site Down?": "¿Por qué está el sitio web caído?",
+    "What is the Downtime?": "¿Qué es el tiempo de caída?",
+    "Do you need Support?": "¿Necesita soporte?",
+    "Statistics": "Estadísticas",
+    "Welcome to :name": "Bienvenido a :name",
     "Looks like you don't have any houses yet.": "Parece que no tiene ninguna casa todavía.",
-    "But don't worry, you can purchase one at any time by clicking the \"New Mint\" button!": "Pero no se preocupe, puede comprar una en cualquier momento haciendo clic en el botón \"Nueva creación\"!", 
+    "But don't worry, you can purchase one at any time by clicking the \"New Mint\" button!": "Pero no se preocupe, puede comprar una en cualquier momento haciendo clic en el botón \"Nueva creación\"!",
     "Are you sure?": "¿Está seguro?",
-    "You are about to spend :currency coins to mint a new building!": "Está a punto de gastar :currency monedas para crear un nuevo edificio!", 
-    "You are about to spend :currency coins to :action this house!": "Está a punto de gastar :currency monedas para :action esta casa!", 
+    "You are about to spend :currency coins to mint a new building!": "Está a punto de gastar :currency monedas para crear un nuevo edificio!",
+    "You are about to spend :currency coins to :action this house!": "Está a punto de gastar :currency monedas para :action esta casa!",
     "Yes, :action it!": "Sí, :action!",
-    "Not enough currency!": "No hay suficiente moneda!", 
-    "You do not have enough currency to mint.": "No tiene suficiente moneda para crear.", 
-    "Minting failed!": "¡Creación fallida!", 
-    "Minting failed. Please try again later.": "¡Creación fallida. Por favor, inténtelo de nuevo más tarde.", 
-    "Missing required parameters.": "Parámetros requeridos perdidos.", 
-    "Building not found.": "Edificio no encontrado.", 
-    "Claim not available yet.": "Reclamación no disponible todavía.", 
-    "Claimed building successfully.": "Edificio reclamado con éxito.", 
-    "Failed to claim building.": "Error al recoger edificio.", 
-    "Not enough currency.": "No hay suficiente moneda.", 
-    "The building does not accommodate new citizens.": "El edificio no acomoda a nuevos ciudadanos.", 
-    "Upgraded building successfully.": "Edificio mejorado con éxito.", 
-    "Failed to upgrade building.": "Error al mejorar edificio.", 
-    "The building is not in need of repair.": "El edificio no necesita reparación.", 
-    "Repaired building successfully.": "Edificio reparado con éxito.", 
-    "Failed to repair building.": "Error al reparar edificio.", 
-    "Invalid data.": "Datos inválidos.", 
-    "Transaction already exists": "La transacción ya existe", 
-    "Invalid amount": "Cantidad inválida", 
-    "Transaction registered successfully!": "Transacción registrada con éxito!", 
-    "Something went wrong": "Algo salió mal", 
-    "Invalid credentials": "Credenciales inválidas", 
-    "Transaction not found": "Transacción no encontrada", 
-    "Cancel": "Cancelar", 
-    "Coming soon!": "¡Próximamente!", 
-    "This feature is not available yet": "Esta función no está disponible todavía"
+    "Not enough currency!": "No hay suficiente moneda!",
+    "You do not have enough currency to mint.": "No tiene suficiente moneda para crear.",
+    "Minting failed!": "¡Creación fallida!",
+    "Minting failed. Please try again later.": "¡Creación fallida. Por favor, inténtelo de nuevo más tarde.",
+    "Missing required parameters.": "Parámetros requeridos perdidos.",
+    "Building not found.": "Edificio no encontrado.",
+    "Claim not available yet.": "Reclamación no disponible todavía.",
+    "Claimed building successfully.": "Edificio reclamado con éxito.",
+    "Failed to claim building.": "Error al recoger edificio.",
+    "Not enough currency.": "No hay suficiente moneda.",
+    "The building does not accommodate new citizens.": "El edificio no acomoda a nuevos ciudadanos.",
+    "Upgraded building successfully.": "Edificio mejorado con éxito.",
+    "Failed to upgrade building.": "Error al mejorar edificio.",
+    "The building is not in need of repair.": "El edificio no necesita reparación.",
+    "Repaired building successfully.": "Edificio reparado con éxito.",
+    "Failed to repair building.": "Error al reparar edificio.",
+    "Invalid data.": "Datos inválidos.",
+    "Transaction already exists": "La transacción ya existe",
+    "Invalid amount": "Cantidad inválida",
+    "Transaction registered successfully!": "Transacción registrada con éxito!",
+    "Something went wrong": "Algo salió mal",
+    "Invalid credentials": "Credenciales inválidas",
+    "Transaction not found": "Transacción no encontrada",
+    "Cancel": "Cancelar",
+    "Coming soon!": "¡Próximamente!",
+    "This feature is not available yet": "Esta función no está disponible todavía",
+    "Home": "Principal",
+    ":name Statistics": "Estadísticas de :name",
+    "Players": "Jugadores",
+    "Houses": "Casas",
+    "Transactions": "Transacciones",
+    "Withdrawals": "Retiros",
+    "Next Claim Available": "Próxima reclamación disponible",
+    "Claim Available !!!": "Reclamación disponible !!!",
+    "Date": "Fecha",
+    "Action": "Acción",
+    "Amount": "Cantidad",
+    "Fee": "Cuota",
+    "Exchange Tokens for Coins": "Intercambio de fichas por monedas",
+    "Withdraw Coins to Tokens": "Retirar monedas a fichas",
+    "Verify Transaction": "Verificar transacción",
+    "Transaction Hash": "Hash de transacción",
+    "Account Transactions": "Transacciones de cuenta",
+    "List of transactions carried out on your account.": "Lista de transacciones realizadas en su cuenta.",
+    "Alert": "Alerta",
+    "Warning": "Advertencia",
+    "Transaction not found! Check it and try again.": "Transacción no encontrada! Compruebe e inténtelo de nuevo.",
+    "Transaction status failed": "Estado de transacción fallido",
+    "This is not a transaction to the game contract": "Esta no es una transacción al contrato del juego",
+    "Transaction logs error": "Error en los registros de transacción",
+    "This hash does not belong to this account": "Este hash no pertenece a esta cuenta",
+    "Transaction destination wrong": "Destino de la transacción equivocado",
+    "Amount must be greater than 0": "La cantidad debe ser mayor que 0",
+    "Insuficient Balance, you need +:amount more Tokens": "Saldo insuficiente, necesita +:amount más fichas",
+    "Error sending tokens": "Error al enviar fichas",
+    "Transaction underpriced!": "Transacción subpreciada!",
+    "Transaction canceled!": "Transacción cancelada!",
+    "Transaction error": "Error de transacción"
 }
