--- a/resources/lang/pt-BR.json
+++ b/resources/lang/pt-BR.json
@@ -27,6 +27,7 @@
     "My Houses": "Minhas Casas",
     "Inventory": "Inventário",
     "Daily Quests": "Missões Diárias",
+    "Welcome to :name": "Bem-vindo ao :name",
     "Marketplace": "Mercado",
     "Exchange": "Casa de Câmbio",
     "All rights reserved": "Todos os direitos reservados",
@@ -82,5 +83,37 @@
     "Transaction not found": "Transação não encontrada",
     "Cancel": "Cancelar",
     "Coming soon!": "Em breve!",
-    "This feature is not available yet": "Esta funcionalidade não está disponível ainda"
+    "This feature is not available yet": "Esta funcionalidade não está disponível ainda",
+    "Home": "Início",
+    ":name Statistics": "Estatísticas de :name",
+    "Players": "Jogadores",
+    "Houses": "Casas",
+    "Transactions": "Transações",
+    "Withdrawals": "Saques",
+    "Next Claim Available": "Coleta disponível",
+    "Claim Available !!!": "Coleta disponível !!!",
+    "Date": "Data",
+    "Action": "Ação",
+    "Amount": "Valor",
+    "Fee": "Taxa",
+    "Exchange Tokens for Coins": "Trocar Tokens por Moedas",
+    "Withdraw Coins to Tokens": "Trocar Moedas por Tokens",
+    "Verify Transaction": "Verificar Transação",
+    "Transaction Hash": "Hash da Transação",
+    "Account Transactions": "Transações da Conta",
+    "List of transactions carried out on your account.": "Lista de transações realizadas em sua conta.",
+    "Alert": "Alerta",
+    "Warning": "Aviso",
+    "Transaction not found! Check it and try again.": "Transação não encontrada! Verifique e tente novamente.",
+    "Transaction status failed": "Falha no status da transação",
+    "This is not a transaction to the game contract": "Esta não é uma transação para o contrato do jogo",
+    "Transaction logs error": "Erro no log da transação",
+    "This hash does not belong to this account": "Este hash não pertence a esta conta",
+    "Transaction destination wrong": "Destino da transação incorreto",
+    "Amount must be greater than 0": "Valor deve ser maior que 0",
+    "Insuficient Balance, you need +:amount more Tokens": "Saldo insuficiente, você precisa de +:amount mais Tokens",
+    "Error sending tokens": "Erro ao enviar tokens",
+    "Transaction underpriced!": "Transação com preço baixo!",
+    "Transaction canceled!": "Transação cancelada!",
+    "Transaction error": "Erro na transação"
 }
