--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -114,5 +114,9 @@
     "Error sending tokens": "发送代币错误",
     "Transaction underpriced!": "交易过于便宜！",
     "Transaction canceled!": "交易取消！",
-    "Transaction error": "交易错误"
+    "Transaction error": "交易错误",
+    "Invalid chain ID. Please change your network in MetaMask and try again.": "无效链ID。请更改你的网络在MetaMask并再试一次。",
+    "Failed to get your wallet address. Please try again.": "获取你的钱包地址失败。请再试一次。",
+    "Invalid wallet address. Please reload the page and try again.": "无效钱包地址。请重新加载页面并再试一次。",
+    "Loading...": "加载中..."
 }
