--- a/resources/lang/he.json
+++ b/resources/lang/he.json
@@ -119,5 +119,8 @@
     "Invalid chain ID. Please change your network in MetaMask and try again.": "מזהה שרשרת לא תקין. אנא שנה את הרשת שלך ב-MetaMask ונסה שוב.",
     "Failed to get your wallet address. Please try again.": "נכשל בקבלת כתובת הארנק. נסה שוב.",
     "Invalid wallet address. Please reload the page and try again.": "כתובת ארנק לא תקינה. נסה לטעון את העמוד מחדש ולנסות שוב.",
-    "Loading...": "טוען..."
+    "Loading...": "טוען...",
+    "Not your transaction": "זה אינו העברה שלך",
+    "Invalid receiver": "מקבל לא תקין",
+    "Transaction completed": "העברה הושלמה",
 }
