--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -121,5 +121,7 @@
     "Loading...": "加载中...",
     "Not your transaction": "不是你的交易",
     "Invalid receiver": "无效接收者",
-    "Transaction completed": "交易完成"
+    "Transaction completed": "交易完成",
+    "Withdrawal": "提现",
+    "Check this Hash": "检查这个哈希"
 }
