--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -123,5 +123,7 @@
     "Invalid receiver": "Ungültiger Empfänger",
     "Transaction completed": "Transaktion abgeschlossen",
     "Withdrawal": "Auszahlung",
-    "Check this Hash": "Diesen Hash überprüfen"
+    "Check this Hash": "Diesen Hash überprüfen",
+    "Install MetaMask": "MetaMask installieren",
+    "No MetaMask detected, please install MetaMask!": "Kein MetaMask gefunden, bitte MetaMask installieren!"
 }
