--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -123,5 +123,7 @@
     "Invalid receiver": "无效接收者",
     "Transaction completed": "交易完成",
     "Withdrawal": "提现",
-    "Check this Hash": "检查这个哈希"
+    "Check this Hash": "检查这个哈希",
+    "Install MetaMask": "安装MetaMask",
+    "No MetaMask detected, please install MetaMask!": "没有检测到MetaMask，请安装MetaMask！"
 }
