--- a/resources/lang/he.json
+++ b/resources/lang/he.json
@@ -124,5 +124,7 @@
     "Invalid receiver": "מקבל לא תקין",
     "Transaction completed": "העברה הושלמה",
     "Withdrawal": "הוצאה",
-    "Check this Hash": "בדוק גיבוב זה"
+    "Check this Hash": "בדוק גיבוב זה",
+    "Install MetaMask": "התקן MetaMask",
+    "No MetaMask detected, please install MetaMask!": "לא זוהה מטא מאסק, אנא התקן את מטא מאסק!"
 }
