--- a/resources/lang/pt-BR.json
+++ b/resources/lang/pt-BR.json
@@ -126,5 +126,6 @@
     "Withdrawal": "Saque",
     "Check this Hash": "Verificar este Hash",
     "Install MetaMask": "Instalar MetaMask",
-    "No MetaMask detected, please install MetaMask!": "MetaMask não detectado, por favor, instale a MetaMask!"
+    "No MetaMask detected, please install MetaMask!": "MetaMask não detectado, por favor, instale a MetaMask!",
+    "install": "Instalar"
 }
