--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -125,5 +125,6 @@
     "Withdrawal": "Retiro",
     "Check this Hash": "Compruebe este Hash",
     "Install MetaMask": "Instalar MetaMask",
-    "No MetaMask detected, please install MetaMask!": "No se ha detectado MetaMask, por favor, instale MetaMask!"
+    "No MetaMask detected, please install MetaMask!": "No se ha detectado MetaMask, por favor, instale MetaMask!",
+    "install": "instalar"
 }
