--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -125,5 +125,6 @@
     "Withdrawal": "Retrait",
     "Check this Hash": "Vérifier ce hash",
     "Install MetaMask": "Installer MetaMask",
-    "No MetaMask detected, please install MetaMask!": "Aucun MetaMask détecté, veuillez installer MetaMask!"
+    "No MetaMask detected, please install MetaMask!": "Aucun MetaMask détecté, veuillez installer MetaMask!",
+    "install": "installer"
 }
