--- a/resources/lang/zh-CN.json
+++ b/resources/lang/zh-CN.json
@@ -125,5 +125,6 @@
     "Withdrawal": "提现",
     "Check this Hash": "检查这个哈希",
     "Install MetaMask": "安装MetaMask",
-    "No MetaMask detected, please install MetaMask!": "没有检测到MetaMask，请安装MetaMask！"
+    "No MetaMask detected, please install MetaMask!": "没有检测到MetaMask，请安装MetaMask！",
+    "install": "安装"
 }
