--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -126,5 +126,6 @@
     "Check this Hash": "Vérifier ce hash",
     "Install MetaMask": "Installer MetaMask",
     "No MetaMask detected, please install MetaMask!": "Aucun MetaMask détecté, veuillez installer MetaMask!",
-    "install": "installer"
+    "install": "installer",
+    "Not enough currency": "Pas assez de pièces"
 }
