--- a/resources/lang/he.json
+++ b/resources/lang/he.json
@@ -54,7 +54,7 @@
     "Welcome to": "ברוכים הבאים ל",
     "Looks like you don't have any houses yet.": "מראה שאין לך בית עדיין.",
     "But don't worry, you can purchase one at any time by clicking the \"New Mint\" button!" : "אבל אין לך להתנצח, אתה יכול לרכוש בית כל זמן על ידי לחיצה על הכפתור \"זרע בית\"!",
-    "Are you sure?" : "Você tem certeza?",
+    "Are you sure?": "האם אתה בטוח?",
     "You are about to spend :currency coins to mint a new building!": "אתה עומד להוציא :currency מטבעות כדי לזרע בית חדש!",
     "You are about to spend :currency coins to :action this house!": "אתה עומד להוציא :currency מטבעות כדי ל:action בית זה!",
     "Yes, :action it!" : "כן, :action זה!",
@@ -127,5 +127,6 @@
     "Check this Hash": "בדוק גיבוב זה",
     "Install MetaMask": "התקן MetaMask",
     "No MetaMask detected, please install MetaMask!": "לא זוהה מטא מאסק, אנא התקן את מטא מאסק!",
-    "install": "התקן"
+    "install": "התקן",
+    "Not enough currency": "אין מטבעות מספיק"
 }
